--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "multer": "^2.0.2",
     "pg-promise": "^12.1.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   }
