--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "start": "serve -s dist -l $PORT"
+    "start": "npx serve -s dist -l $PORT"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
@@ -29,6 +29,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
+    "serve": "^14.2.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
   },
