--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,10 +1,11 @@
-# Use a lightweight Python base
 FROM python:3.13-slim
 
-# Set working directory
 WORKDIR /app
 
-# Install system dependencies for OpenCV and builds
+# Set UTF-8 locale
+ENV PYTHONUTF8=1
+
+# System dependencies
 RUN apt-get update && apt-get install -y \
     libgl1 \
     libglib2.0-0 \
@@ -12,21 +13,19 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-# Install CPU-only PyTorch + torchvision directly
+# Install CPU-only PyTorch + torchvision
 RUN pip install --no-cache-dir torch torchvision --index-url https://download.pytorch.org/whl/cpu
 
-# Copy requirements first for better caching
+# Copy requirements and install
 COPY requirements.txt .
-
-# Install other Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application (including your model folder)
+# Copy app code
 COPY . .
 
-# Railway uses PORT env automatically
+# Railway port
 ENV PORT=8080
 EXPOSE 8080
 
-# Start the app with Uvicorn
+# Run Uvicorn
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8080"]
