--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^17.2.2",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
+    "onnxruntime-web": "^1.23.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
