--- a/frontend/DOCKERFILE
+++ b/frontend/DOCKERFILE
@@ -20,7 +20,8 @@ RUN wget --no-check-certificate \
      'https://docs.google.com/uc?export=download&id=FILE_ID' \
      -O public/cloth_segm.onnx
 
-RUN ls -lh /app/public/model.onnx
+RUN ls -lh /app/public/cloth_segm.onnx
+RUN ls -lh /app/dist/assets/
 
 # build app
 RUN npm run build
