--- a/frontend/DOCKERFILE
+++ b/frontend/DOCKERFILE
@@ -1,29 +1,29 @@
-# Dockerfile snippet
+# Use Node.js base image
 FROM node:20
 
-# install wget & unzip if needed
-RUN apt-get update && apt-get install -y wget
+# Install wget, unzip, python & pip (for gdown)
+RUN apt-get update && \
+    apt-get install -y wget unzip python3 python3-pip && \
+    pip3 install --no-cache-dir gdown
 
-# set workdir
+# Set working directory
 WORKDIR /app
 
-# copy package.json etc
+# Copy package.json and package-lock.json first for caching
 COPY package*.json ./
 RUN npm install
 
-# copy your code
+# Copy rest of the code
 COPY . .
 
-# download ONNX model from Google Drive
-# replace FILE_ID with your actual Google Drive file ID
-RUN wget --no-check-certificate \
-     'https://docs.google.com/uc?export=download&id=1SZx185XDtS6MyHYwRTc5KssF7ijQj3h4' \
-     -O public/cloth_segm.onnx
+# Download ONNX model from Google Drive using gdown
+RUN gdown https://drive.google.com/uc?id=1SZx185XDtS6MyHYwRTc5KssF7ijQj3h4 -O public/cloth_segm.onnx
 
+# Verify file exists and size
 RUN ls -lh /app/public/cloth_segm.onnx
-RUN ls -lh /app/dist/assets/
 
-# build app
+# Build app
 RUN npm run build
 
-CMD ["npm", "run","start"]
+# Start the app
+CMD ["npm", "run", "start"]
