--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,9 +14,10 @@ COPY . .
 
 # Download ONNX model from Google Drive using gdown
 RUN apt-get update && \
-    apt-get install -y wget unzip python3 && \
-    wget --no-check-certificate "https://docs.google.com/uc?export=download&id=1SZx185XDtS6MyHYwRTc5KssF7ijQj3h4" \
-    -O public/cloth_segm.onnx
+    apt-get install -y python3 python3-pip && \
+    pip3 install --no-cache-dir gdown && \
+    gdown "https://drive.google.com/uc?id=1SZx185XDtS6MyHYwRTc5KssF7ijQj3h4" -O public/cloth_segm.onnx
+
 
 # Verify file exists and size
 RUN ls -lh /app/public/cloth_segm.onnx
