--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -21,7 +21,13 @@ RUN apt-get update && \
 
 # Verify file exists and size
 RUN ls -lh /app/public/cloth_segm.onnx
+ARG VITE_SUPABASE_URL
+ARG VITE_SUPABASE_ANON_KEY
+ARG VITE_BACKEND_ROUTE
 
+ENV VITE_SUPABASE_URL=$VITE_SUPABASE_URL
+ENV VITE_SUPABASE_ANON_KEY=$VITE_SUPABASE_ANON_KEY
+ENV VITE_BACKEND_ROUTE=$VITE_BACKEND_ROUTE
 # Build app
 RUN npm run build
 
