--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.2",
     "framer-motion": "^12.23.22",
+    "hamburger-react": "^2.5.2",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
